Update to fix iframe scaling and overflow issues

--- a/css/raycasting.css
+++ b/css/raycasting.css
@@ -1,15 +1,15 @@
 #raycaster {
   display: flex;
   flex-direction: column;
-  height: 80%;
+  height: 100%;
   width: 100%;
-  margin-top: 2%;
   align-items: center;
 }
 
 #raycaster iframe {
   width: 100%;
   height: 100%;
+  margin-top: 2%;
   max-width: 640px;
   max-height: 360px;
 }
@@ -17,6 +17,7 @@
 #raycaster #desc {
   width: 60%;
   max-width: 640px;
+  margin-bottom: 50px;
   text-align: left;
   margin-top: 10px;
 }
